# Iot-Managment-System

./: README.md  docker-compose.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  auth_routes.py  device_routes.py
backend/app/common/: auth.py  examples.py  hash.py  mapper.py  pagination.py
backend/app/models/: __init__.py  action_model.py  action_trigger_model.py  automation_model.py  device_model.py  sensor_model.py  sensor_value_model.py  user_model.py
backend/app/schemas/: __init__.py  action_schema.py  action_trigger_schema.py  automation_schema.py  device_schema.py  sensor_schema.py  sensor_value_schema.py  user_schema.py
backend/app/services/: auth_service.py
backend/migrations/models/: 0_20251022141601_init.py  1_20251023130424_update.py
frontend/: README.md  orval.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/lib/default/: default.ts
frontend/app/lib/model/: authResponse.ts  index.ts  userCreateSchema.ts  validationErrorLocItem.ts
frontend/components/ui/: label.tsx
frontend/lib/auth/: auth.ts
frontend/lib/model/: authLoginSchema.ts  hTTPValidationError.ts  scalarDocsGetParams.ts  userResponseSchema.ts  validationError.ts
